# python_prof_otus-project

./: .env  .flake8  .gitignore  Dockerfile  README.md  docker-compose.yaml  docker-compose.yml  entrypoint.sh  mypy.ini  pyproject.toml
vksearch/: Dockerfile  entrypoint.sh  manage.py  mypy.ini  pyproject.toml
vksearch/siteauth/: admin.py  forms.py  models.py  urls.py  views.py
vksearch/siteauth/migrations/: 0001_initial.py
vksearch/siteauth/tests/: test_siteuser_login.py  test_siteuser_register.py
vksearch/templates/: base.html  home.html  paginator.html
vksearch/vkapi_services/: base_task.py  community.py  main.py  vkapiclient.py
vksearch/vkgroup/: apps.py  form.py  forms.py  models.py  tasks.py  urls.py  views.py  vkapi_service.py  vkapiclient.py
vksearch/vkgroup/migrations/: 0001_initial.py  0002_alter_community_description_alter_community_members_and_more.py  0003_alter_community_type_alter_communitytype_name.py  0004_alter_communitytype_name.py  0005_alter_community_description.py  0006_agerange_country_audience_community_community_age_vk_and_more.py  0007_alter_audienceprofile_sex_alter_community_age_vk.py  0008_alter_community_name_alter_community_site.py  0009_alter_community_site.py  0010_alter_community_members_alter_community_name.py  0011_alter_community_members.py  0012_alter_community_age_vk.py  0013_alter_community_status.py  0014_alter_community_deactivated_and_more.py  0017_alter_community_description.py  (+10 more)
vksearch/vkgroups/: apps.py  models.py
vksearch/vksearch/: __init__.py  asgi.py  celery.py  settings.py  urls.py  view.py  wsgi.py
(+12 files in other folders)
